<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/feature_storage_paging_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ak_content_padding"
        android:text="@string/feature_storage_paging_tips"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <TextView
        android:id="@+id/tvMeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/ak_content_padding"
        android:textAppearance="?attr/textAppearanceBodySmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/ak_content_padding">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/ak_space_8"
            android:layout_weight="1"
            android:text="@string/feature_storage_paging_seed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/ak_space_8"
            android:text="@string/feature_storage_room_clear_all" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRefreshMeta"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_storage_paging_refresh" />
    </LinearLayout>

    <com.sys.androidkit.core.ui.widget.DemoStateView
        android:id="@+id/stateView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
