<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/feature_storage_relation_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ak_content_padding"
        android:text="@string/feature_storage_relation_tips"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/ak_content_padding"
            android:paddingBottom="@dimen/ak_space_8">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSeed"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ak_space_8"
                android:text="@string/feature_storage_relation_seed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddAuthor"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ak_space_8"
                android:text="@string/feature_storage_relation_add_author" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature_storage_relation_add" />
        </LinearLayout>
    </HorizontalScrollView>

    <com.sys.androidkit.core.ui.widget.DemoStateView
        android:id="@+id/stateView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
